home page alignment fixing

--- a/alpha/event/static/styles/styles-new.css
+++ b/alpha/event/static/styles/styles-new.css
@@ -178,7 +178,7 @@ ul.errorlist li {
 }
 
 .left-menu ul.categories.tags {
-    padding-top: 6px;
+    padding-top: 8px;
 }
 
 .left-menu ul.categories.tags li {
