--- a/alpha/home/static/styles/styles.css
+++ b/alpha/home/static/styles/styles.css
@@ -457,7 +457,7 @@ table.schedule-bar-menu td.selected a {
 
 .entry-navigation-np
 {
-    padding-top: 12px;
+    padding-top: 13px;
     text-align:center;
 }
 
